# Media-Advertising

./: .gitignore  INSTALL_STEPS.md  MANIFEST.in  README.md  hooks.py  package.json  pyproject.toml  setup.py
media_advertising/: __init__.py  demo_data.py  hooks.py  import_data.py  modules.txt
media_advertising/billing_finance/: utils.py
media_advertising/campaign_management/: utils.py
media_advertising/config/: desktop.py  docs.py
media_advertising/dashboard/: media_advertising_dashboard.json
media_advertising/dashboard_chart/: campaigns_by_status.json  monthly_invoice_value.json
media_advertising/fixtures/: ad_format.json  industry_vertical.json  kpi_definition.json  media_category.json  number_card.json
media_advertising/media_advertising/notification/: media_invoice_overdue.json
media_advertising/notification/: campaign_deadline_alert.json  creative_approval_request.json
media_advertising/number_card/: active_campaigns.json  open_media_invoices.json  pending_client_approvals.json
media_advertising/public/css/: media_advertising.bundle.css
media_advertising/public/js/: media_advertising.js
media_advertising/report/budget_vs_actual_report/: budget_vs_actual_report.js  budget_vs_actual_report.json  budget_vs_actual_report.py
media_advertising/report/campaign_performance_summary/: campaign_performance_summary.json  campaign_performance_summary.py
media_advertising/report/client_revenue_report/: client_revenue_report.js  (+1 more)
media_advertising/reporting_analytics/: utils.py
workspace/media_advertising/: media_advertising.json
(+116 files in other folders)
